ViTables ChangeLog
==================
** September 21, 2017 **
Added basic support for filenodes.

** August 13, 2017 **
Fixed a few PEP8 issues.

** July 17, 2017 **
Import/export CSV capabilities have been integrated in the ViTables core.

** June 09, 2017 **
Added icons for creating Desktop shortcuts on Unices.

** June 07, 2017 **
Fixed a minor bug in the Preferences dialog.

** June 06, 2017 **
The plugins system has been slightly refactored and simplified.

** June 02, 2017 **
Sphinx configuration file has been updated.

** May 31, 2017 **
The Users' Guide has been updated.

** May 27, 2017 **
Last minute changes prior to publishing.

** May 24, 2017 **
Packaging related files have been updated.

The Users' Guide has been updated.

Some .txt files have been updated.

Calls to str(object, 'UTF-8') have been removed.

Bug fixed: when navigating large views with the mouse wheel an error is raised.

Bug fixed: sometimes new views are frozen and cannot be resized with the mouse.

** May 23, 2017 **
export_csv and import_csv plugins have been refactored and debugged.

** May 22, 2017 **
export_csv plugin has been updated and debugged.

** May 21, 2017 **
time_series plugin has been updated to support latest Pandas.

dbs_tree_sort plugin has been improved.

** May 20, 2017 **
Management of logged messages has been cleaned.

** May 17, 2017 **
Bug fixed: moving nodes to a different file raises a tables.ClosedNodeError.

** May 15, 2017 **
Bug fixed: files cannot be opened by drag and drop into the tree view.

** May 14, 2017 **
Table queries slightly reworked: query ranges are now Python-like ranges i.e. 
the meaning of the start, stop and step parameters is the same as for Python
slices.

** May 13, 2017 **
Bug fixed: zoomed views have rows and columns starting from 1.

Bug fixed: displaying EnumCol columns is badly implemented.

** May 12, 2017 **
Bug fixed: tooltips for link nodes are not shown. Instead a verbose error
message is logged.

** May 09, 2017 **