@@ -29,50 +29,12 @@ that leaf will be displayed in the workspace using this wrapper widget.
 from qtpy import QtCore
 from qtpy import QtWidgets
 
-import tables
-from tables.nodes import filenode
-
 from . import leaf_view, leaf_model, df_model
 from .. import utils as vtutils
 from ..nodeprops import nodeinfo
 from ..vtwidgets import zoom_cell
 
-
 __docformat__ = 'restructuredtext'
-
-
-def _filenodeToVLArray(file_node, dbdoc):
-    """Convert a filenode into a VLArray.
-
-    Every line of the filenode will go to a row in the VLArray.
-
-    The vlarray is created because accessing an Array from ViTables is much
-    easier than accessing a filenode. A filenode is accessed like a regular
-    file, which is not appropriated for ViTables. linecache module is not an
-    option because it keeps the whole file in memory.
-
-    CAVEAT: filling the VLArray is slow -> displaying the filenode for the
-    very first time is slow.
-
-    The array is stored in a hidden location in the file which will be deleted
-    when the file is closed.
-    """
-
-    # Create the hidden group where the table will be stored. It will be
-    # deleted when the file is closed. Afterward create the VLArray and fill it
-    if dbdoc.filenode_hidden_group is None:
-        try:
-            QtWidgets.qApp.setOverrideCursor(QtCore.Qt.WaitCursor)
-            dbdoc.createHiddenGroup(filenode=True)
-            hidden_leaf = dbdoc.h5file.create_vlarray(dbdoc.filenode_hidden_group, 'filenode_as_VLArray',
-                                                      atom=tables.VLStringAtom())
-            with file_node as f:
-                for line in f:
-                    hidden_leaf.append(line)
-        finally:
-            QtWidgets.qApp.restoreOverrideCursor()
-
-    return dbdoc.get_node(dbdoc.filenode_hidden_group + '/filenode_as_VLArray')
 
 
 class DataSheet(QtWidgets.QMdiSubWindow):
@@ -103,24 +65,10 @@ class DataSheet(QtWidgets.QMdiSubWindow):
         else:
             leaf = pt_node
 
-        # If tables.Node is a filenode some extra work is required in order to
-        # display it as text and not as a bunch of integers
-        file = leaf._v_file
-        nodepath = self.dbt_leaf.nodepath
-        leaf_is_filenode = False
-        try:
-            if file.get_node_attr(nodepath, 'NODE_TYPE') == filenode.NodeType:
-                leaf_is_filenode = True
-                file_node = filenode.open_node(leaf, 'r')
-                filepath = self.dbt_leaf.filepath
-                dbdoc = dbt_model.getDBDoc(filepath)
-                leaf = _filenodeToVLArray(file_node, dbdoc)
-        except AttributeError:
-            pass
-
         self.leaf_model = df_model.try_opening_as_dataframe(leaf)
         if not self.leaf_model:
             self.leaf_model = leaf_model.LeafModel(leaf)
+
         self.leaf_view = leaf_view.LeafView(self.leaf_model)
 
         super(DataSheet, self).__init__(self.vtgui.workspace,
@@ -161,7 +109,7 @@ class DataSheet(QtWidgets.QMdiSubWindow):
         # will be called
         QtWidgets.QMdiSubWindow.closeEvent(self, event)
 
-        if self.vtgui.workspace.subWindowList() == []:
+        if not self.vtgui.workspace.subWindowList():
             self.vtgui.dbs_tree_view.setFocus(True)
 
     def focusInEvent(self, event):
